[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fire.png" type="Texture" id=1]
[ext_resource path="res://entity/fire.gd" type="Script" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17, 17 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 11.59
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 17.93
gravity = Vector3( 0, 10, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.59
color = Color( 0.968627, 0.568627, 0.34902, 1 )

[node name="fire" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.3, 1, 1, 1 )
position = Vector2( 0, -14 )
scale = Vector2( 1.6875, 1.6875 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 50
lifetime = 2.0
process_material = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.38419e-07, -17 )
scale = Vector2( 0.78, 0.78 )
texture = ExtResource( 3 )
color = Color( 0.960784, 0.32549, 0.0784314, 1 )
energy = 1.4

[connection signal="body_entered" from="." to="." method="_on_fire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_fire_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
